# calix

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bump.config.ts  crowdin.yml  cspell.config.yaml  eslint.config.js  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  posthog.config.ts  rust-toolchain.toml  uno.config.ts  vite-env.d.ts  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: autofix.yaml  ci.yml  crowdin-cron-sync.yml  crowdin-manual-upload.yml  deploy-cloudflare-workers-preview-deploy.yml  deploy-cloudflare-workers-preview-prepare.yml  deploy-cloudflare-workers.yml  deploy-huggingface-spaces.yml  release-crates.yaml  release-docker.yaml  release-pkg.yaml  release-tamagotchi.yml  release-vsix.yaml  update-nix-assets-hash.yaml  update-nix-pnpm-deps-hash.yaml
apps/component-calling/: package.json  tsconfig.json
apps/server/: .env  Dockerfile  docker-compose.yml  drizzle.config.ts  package.json  railway.toml  tsconfig.json  vitest.config.ts
apps/stage-pocket/: .swiftlint.yml  capacitor.config.ts  index.html  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
apps/stage-tamagotchi/: ai.moeru.airi.desktop  ai.moeru.airi.flatpak.yml  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.json  tsconfig.node.json  (+4 more)
docs/: README.fr.md  README.ja-JP.md  README.ru-RU.md  README.vi.md  README.zh-CN.md  netlify.toml  package.json  uno.config.ts  vite-env.d.ts  wechat.md
nix/: common.nix  package.nix  pnpm-deps-hash.txt  update-assets-hash.sh  update-pnpm-deps-hash.sh
patches/: srvx@0.9.8.patch
(+454 files in other folders)
