[workspace]
members = [
  "crates/tauri-plugin-ipc-audio-transcription-ort",
  "crates/tauri-plugin-ipc-audio-vad-ort",
  "crates/tauri-plugin-mcp",
  "crates/tauri-plugin-rdev",
  "crates/tauri-plugin-window-pass-through-on-hover",
  "crates/tauri-plugin-window-router-link"
]
resolver = "2"

[workspace.package]
version = "0.8.1-beta.12"

[workspace.dependencies.tauri-plugin-ipc-audio-transcription-ort]
path = "./crates/tauri-plugin-ipc-audio-transcription-ort"

[workspace.dependencies.tauri-plugin-ipc-audio-vad-ort]
path = "./crates/tauri-plugin-ipc-audio-vad-ort"

[workspace.dependencies.tauri-plugin-mcp]
path = "./crates/tauri-plugin-mcp"

[workspace.dependencies.tauri-plugin-rdev]
path = "./crates/tauri-plugin-rdev"

[workspace.dependencies.tauri-plugin-window-pass-through-on-hover]
path = "./crates/tauri-plugin-window-pass-through-on-hover"

[workspace.dependencies.tauri-plugin-window-router-link]
path = "./crates/tauri-plugin-window-router-link"

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false
